src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  scroll-behavior: smooth;
}

@font-face {
  font-family: acme;
  src: url(./assets/fonts/Acme-Regular.ttf);
}
@font-face {
  font-family: circular-book;
  src: url(./assets/fonts/CircularStd-Book.ttf);
}
@font-face {
  font-family: circular-medium;
  src: url(./assets/fonts/circular-std-medium.ttf);
}
@font-face {
  font-family: neue-montreal;
  src: url(./assets/fonts/NeueMontreal-Regular.ttf);
}
@font-face {
  font-family: roslindale-display;
  src: url(./assets/fonts/RoslindaleDisplayCondensed-Regular.ttf);
}
@font-face {
  font-family: gtAlpina;
  src: url(./assets/fonts/GT-Alpina-Regular-Italic.ttf);
}
@font-face {
  font-family: BebasNeue-Regular;
  src: url(./assets/fonts/BebasNeue-Regular.ttf);
}
@font-face {
  font-family: Canopee-Regular;
  src: url(./assets/fonts/Canopee-Regular.otf);
}

.menu {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  padding: 0;
}
.line {
  fill: none;
  stroke: #000;
  stroke-width: 6;
  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
}
.line1 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}
.line2 {
  stroke-dasharray: 60 60;
  stroke-width: 6;
}
.line3 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}
.opened-line1 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}
.opened-line2 {
  stroke-dasharray: 1 60;
  stroke-dashoffset: -30;
  stroke-width: 6;
}
.opened-line3 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}

.blob {
  animation-iteration-count: infinite;
  animation-name: rotate;
  animation-duration: 3.5s;
  animation-timing-function: linear;
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}

@layer utilities {
  .flex-center {
    @apply flex items-center justify-center;
  }

  .nav-height {
    @apply h-[calc(100vh-20px)];
  }
}

.hero {
  background-image: radial-gradient(125% 125% at 50% 0%, #121315 60%, #00ffa2);
}
.about-div {
  background-image: radial-gradient(
    125% 125% at 50% 100%,
    #121315 60%,
    #00ffa2
  );
}

.skill-para {
  width: calc(40rem + 40vw);
  font-size: calc(1.5rem + 1vw);
  line-height: calc(3rem + 2vw);
}

@media (max-width: 1279px) {
  .about,
  .works-mob,
  .whatIUse,
  .contact {
    height: calc(30.5rem + 30.5vw);
  }
}
@media (max-width: 1023px) {
  .skill-para {
    width: calc(35rem + 35vw);
  }
}
@media (max-width: 810px) {
  .skill-para {
    width: calc(30rem + 30vw);
    font-size: calc(1rem + 1vw);
    line-height: calc(2rem + 2vw);
  }
}
@media (max-width: 767px) {
  .hero {
    background-image: radial-gradient(
      135% 135% at 50% 0%,
      #121315 60%,
      #00ffa2
    );
  }
  .about-div {
    background-image: radial-gradient(
      135% 135% at 50% 100%,
      #121315 60%,
      #00ffa2
    );
  }
}
@media (max-width: 596px) {
  .skill-para {
    width: calc(25rem + 25vw);
    font-size: calc(0.9rem + 0.9vw);
    line-height: calc(1.9rem + 1.9vw);
  }
}
@media (max-width: 434px) {
  .skill-para {
    width: calc(20rem + 20vw);
    font-size: calc(0.8rem + 0.8vw);
    line-height: calc(1.8rem + 1.8vw);
  }
}

